@@ -66,6 +66,16 @@ a
     :color = !color_link_image
     :text-decoration none
 
+#options
+  a
+    :border-bottom 1px dotted darkcyan
+    :color darkcyan
+    :text-decoration none
+    &:hover
+      :background = !color_body
+      :border-bottom 1px dotted darkblue
+      :color darkblue
+
 // Smaller fonts.
 //------------------------------------------------------------------------------
 abbr
