@@ -81,7 +81,9 @@
   :padding 20px
   :width 400px 
   :-moz-border-radius 6px
+  :-moz-box-shadow 5px 5px 15px #bbb, -5px 0px 15px #bbb
   :-webkit-border-radius 6px
+  :-webkit-box-shadow 5px 5px 15px #bbb, -5px 0px 15px #bbb
 
   input[type="text"], input[type="password"]
     :font-size 16px
@@ -98,7 +100,9 @@
   :background white
   :padding 8px 15px 15px 15px
   :-moz-border-radius 4px
+  :-moz-box-shadow 2px 2px 8px #bbb, -2px 0px 8px #bbb
   :-webkit-border-radius 4px
+  :-webkit-box-shadow 2px 2px 8px #bbb, -2px 0px 8px #bbb
   
 .sidebar
   :color #3f3f3f
@@ -362,10 +366,12 @@
 //------------------------------------------------------------------------------
 .filters, .panel
   :background snow
-  :margin 0px 0px 10px 0px
+  :margin 0px 0px 12px 0px
   :padding 6px 8px 6px 8px
   :-moz-border-radius 4px
   :-webkit-border-radius 4px
+  :-moz-box-shadow 2px 2px 8px #bbb, -2px 0px 8px #bbb
+  :-webkit-box-shadow 2px 2px 8px #bbb, -2px 0px 8px #bbb
 
 .filters
   h4
