@@ -60,6 +60,7 @@ p
     :color darkgreen
     :margin 0px
     :padding 5px 0px 5px 16px
+
   &.flash_exception
     :background #df9
     :border 5px limegreen solid
@@ -67,6 +68,8 @@ p
     :margin 50px auto
     :padding 50px
     :width 450px
+    :-moz-box-shadow 5px 5px 15px #999, -5px 0px 15px #999
+    :-webkit-box-shadow 5px 5px 15px #999, -5px 0px 15px #999
 
 // Autocomplete.
 //------------------------------------------------------------------------------
