@@ -1,5 +1,5 @@
 - if @user == @current_user && Setting.per_user_locale
-  %div(style="float:right")
+  %div#options(style="float:right")
     #{t :profile_language}: #{link_to(language_for(@current_user), "#", :id => :locale)}
 
 %table(cellspacing="0" cellpadding="0")
