@@ -51,7 +51,9 @@
   padding: 20px;
   width: 400px;
   -moz-border-radius: 6px;
-  -webkit-border-radius: 6px; }
+  -moz-box-shadow: 5px 5px 15px #bbb, -5px 0px 15px #bbb;
+  -webkit-border-radius: 6px;
+  -webkit-box-shadow: 5px 5px 15px #bbb, -5px 0px 15px #bbb; }
   .standalone input[type="text"], .standalone input[type="password"] {
     font-size: 16px;
     padding: 2px;
@@ -66,7 +68,9 @@
   background: white;
   padding: 8px 15px 15px 15px;
   -moz-border-radius: 4px;
-  -webkit-border-radius: 4px; }
+  -moz-box-shadow: 2px 2px 8px #bbb, -2px 0px 8px #bbb;
+  -webkit-border-radius: 4px;
+  -webkit-box-shadow: 2px 2px 8px #bbb, -2px 0px 8px #bbb; }
 
 .sidebar {
   color: #3f3f3f;
@@ -296,10 +300,12 @@
 
 .filters, .panel {
   background: snow;
-  margin: 0px 0px 10px 0px;
+  margin: 0px 0px 12px 0px;
   padding: 6px 8px 6px 8px;
   -moz-border-radius: 4px;
-  -webkit-border-radius: 4px; }
+  -webkit-border-radius: 4px;
+  -moz-box-shadow: 2px 2px 8px #bbb, -2px 0px 8px #bbb;
+  -webkit-box-shadow: 2px 2px 8px #bbb, -2px 0px 8px #bbb; }
 
 .filters h4 {
   color: navy;
