@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Wed, Jan 7, 2010
 ---------------------------------------------------------------------
 - Added :per_user_locale setting (default is false).
+- Added some CSS eye candy (drop shadows and options links).
 
 Wed, Jan 6, 2010
 ---------------------------------------------------------------------
